PROJETO COM SUAS FUNCIONALIDADES EM DESENVOLVIMENTO, PORTAL CATIVO

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ../build:/usr/share/nginx/html:ro
+      - ./backend/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./build:/usr/share/nginx/html:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
