PROJETO COM SUAS FUNCIONALIDADES EM DESENVOLVIMENTO, PORTAL CATIVO

--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -104,7 +104,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://host.docker.internal:4001/;
+        proxy_pass http://fastapi:4001/;
     }
     location /api/nest/ {
         rewrite ^/api/nest/(.*)$ /$1 break;
@@ -112,6 +112,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://host.docker.internal:4002/;
+        proxy_pass http://nest:4002/;
     }
 }
