PROJETO COM SUAS FUNCIONALIDADES EM DESENVOLVIMENTO - INCLUSÃO DE REDIS E N8N

--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -59,6 +59,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://host.docker.internal:4002/;
     }
+
+    # n8n editor/dev
+    location ^~ /n8n/ {
+        rewrite ^/n8n/(.*)$ /$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://n8n:5678/;
+    }
 }
 
 ################################################################################
@@ -113,5 +123,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://nest:4002/;
+    }
+
+    # n8n editor/prod
+    location ^~ /n8n/ {
+        rewrite ^/n8n/(.*)$ /$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://n8n:5678/;
     }
 }
