PROJETO COM SUAS FUNCIONALIDADES EM DESENVOLVIMENTO, N8N FINALIZADO

--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -12,36 +12,27 @@ server {
     location = /generate_204 { return 204; }
     location = /hotspot-detect.html { default_type text/plain; return 200 'OK'; }
 
-    # DEV: proxy completo para Vite
+    # Servir build estático também em localhost
     location ^~ /portal/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 60s;
-        proxy_pass http://host.docker.internal:4000;
-        proxy_redirect off;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
-    location ~ ^/(?:@vite|@react-refresh|src/|node_modules/|assets/) {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 60s;
-        proxy_pass http://host.docker.internal:4000$request_uri;
-        proxy_redirect off;
+    location /assets/ {
+        root /usr/share/nginx/html;
+        add_header Cache-Control "public, max-age=2592000, immutable";
     }
 
-    location /assets/ { root /usr/share/nginx/html; expires 30d; }
-
-    location / { root /usr/share/nginx/html; try_files $uri $uri/ /index.html; }
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
 
     location /api/fastapi/ {
         rewrite ^/api/fastapi/(.*)$ /$1 break;
@@ -49,7 +40,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://host.docker.internal:4001/;
+        proxy_pass http://fastapi:4001/;
     }
     location /api/nest/ {
         rewrite ^/api/nest/(.*)$ /$1 break;
@@ -57,17 +48,43 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://host.docker.internal:4002/;
+        proxy_pass http://nest:4002/;
     }
 
     # n8n editor/dev
     location ^~ /n8n/ {
         rewrite ^/n8n/(.*)$ /$1 break;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://n8n:5678/;
+    }
+    # n8n assets under /n8n/assets with short cache
+    location ^~ /n8n/assets/ {
+        rewrite ^/n8n/assets/(.*)$ /assets/$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Cache-Control "public, max-age=300";
+        proxy_pass http://n8n:5678;
+    }
+    # n8n assets under subpath
+    location ^~ /n8nassets/ {
+        rewrite ^/n8nassets/(.*)$ /assets/$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Cache-Control "public, max-age=300";
+        proxy_pass http://n8n:5678;
     }
 }
 
@@ -96,7 +113,10 @@ server {
     }
 
     # Assets (build)
-    location /assets/ { root /usr/share/nginx/html; expires 30d; }
+    location /assets/ {
+        root /usr/share/nginx/html;
+        add_header Cache-Control "public, max-age=2592000, immutable";
+    }
 
     # Fallback SPA para outras rotas
     location / {
@@ -129,9 +149,35 @@ server {
     location ^~ /n8n/ {
         rewrite ^/n8n/(.*)$ /$1 break;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://n8n:5678/;
+    }
+    # n8n assets under /n8n/assets with short cache
+    location ^~ /n8n/assets/ {
+        rewrite ^/n8n/assets/(.*)$ /assets/$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Cache-Control "public, max-age=300";
+        proxy_pass http://n8n:5678;
+    }
+    # n8n assets under subpath
+    location ^~ /n8nassets/ {
+        rewrite ^/n8nassets/(.*)$ /assets/$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /n8n;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header Cache-Control "public, max-age=300";
+        proxy_pass http://n8n:5678;
     }
 }
