--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./backend/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./backend/nginx:/etc/nginx/conf.d:ro
       - ./build:/usr/share/nginx/html:ro
       - nginx_logs:/var/log/nginx
     depends_on:
